Mark sub-frame root layer non-fast scrollable when wheel handlers present.

Just like with touch event handlers, at present a sub-frame's
compositor does not receive regions rects for non-fast scrollable
regions that accompany MouseWheel handlers. Until ScrollingCoordinator
is made per-frame, we should mark the entire root layer rect as
non-fast scrollable in the presence of blocking wheel handlers.

The primary changes are all in render_widget_compositor.cc; other
files are touched only to give the function a more inclusive name.

BUG=698195

Review-Url: https://codereview.chromium.org/2740133002
Cr-Commit-Position: refs/heads/master@{#456131}

Former-commit-id: 47b1b819e0e239b1c753ae4e736f77ac9ccafcdd