third_party/WebKit/Source/core/page/ChromeClient.h
@@ -265,7 +265,7 @@ class CORE_EXPORT ChromeClient : public HostWindow {
   virtual WebEventListenerProperties eventListenerProperties(
       LocalFrame*,
       WebEventListenerClass) const = 0;
-  virtual void updateTouchRectsForSubframeIfNecessary(LocalFrame*) = 0;
+  virtual void updateEventRectsForSubframeIfNecessary(LocalFrame*) = 0;
   virtual void setHasScrollEventHandlers(LocalFrame*, bool) = 0;
 
   virtual void setTouchAction(LocalFrame*, TouchAction) = 0;
